chibi-safe/chibi-safe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chibisafe
  namespace: chibisafe
  labels:
    app: chibisafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chibisafe
  template:
    metadata:
      labels:
        app: chibisafe
    spec:
      containers:
        - name: chibisafe
          image: chibisafe/chibisafe:latest
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: chibisafe-pvc
              mountPath: /database:/app/database
            - name: chibisafe-pvc
              mountPath: /uploads:/app/uploads
            - name: chibisafe-pvc
              mountPath: /logs:/app/logs
        - name: caddy
          image: caddy:2-alpine
          ports:
            - containerPort: 24424
          volumeMounts:
            - name: chibisafe-pvc
              mountPath: /Caddyfile:/etc/caddy/Caddyfile
            - name: chibisafe-pvc
              mountPath: /uploads:/app/uploads
      restartPolicy: Always
      volumes:
        - name: chibisafe-pvc
          persistentVolumeClaim:
            claimName: chibisafe-pvc
