chibi-safe/chibi-safe-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chibi-safe-proxy
  namespace: chibisafe
  labels:
    app: chibi-safe-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chibi-safe-proxy
  template:
    metadata:
      labels:
        app: chibi-safe-proxy
    spec:
      containers:
        - name: chibi-safe-proxy
          image: wololoaeyoyo/chibiproxy:latest
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
