chibi-safe/chibi-safe-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chibisafe-backend
  namespace: chibisafe
  labels:
    app: chibisafe
spec:
  selector:
    app: chibisafe-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: caddy-service
#   namespace: chibisafe
# spec:
#   selector:
#     app: caddy
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#   type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: chibisafe
  namespace: chibisafe
spec:
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
