chibi-safe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chibisafe-ingress
  namespace: chibisafe
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: chibisafe.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chibisafe
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chibisafe-backend-ingress
  namespace: chibisafe
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: chibisafe-backend.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chibisafe-backend
                port:
                  number: 8000
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: caddy-ingress
#   namespace: chibisafe
#   annotations:
#     kubernetes.io/ingress.class: cloudflare-tunnel
# spec:
#   rules:
#     - host: caddy.wololoaeyoyo.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: caddy-service
#                 port:
#                   number: 80
